Add asterisk prop

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -10,6 +10,7 @@
                    :empty="isEmpty"
                    :error="hasError"
                    :valid="isValid"
+                   :asterisk="asterisk"
                    width="100%"
                    :icon-name="iconName"
                    @mousedown="inputOnMousedown"
