--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -15,6 +15,7 @@
                    :focus="isFocus"
                    :empty="isEmpty"
                    :icon-name="iconName"
+                   :asterisk="asterisk"
                    v-if="!plain">
         <textarea class="m-textarea__input"
                   :disabled="!active"
