Add $emit('paste') in input-management for textfield and textarea

--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -27,6 +27,7 @@
                   @change="onChange"
                   @keyup="onKeyup"
                   @keydown="onKeydown"
+                  @paste="onPaste"
                   ref="input"
                   v-model="model"></textarea>
     </m-input-style>
