--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -27,6 +27,7 @@
                @keyup="onKeyup"
                @keydown="onKeydown"
                @change="onChange"
+               @paste="onPaste"
                v-model="model">
         <div slot="right-content" class="m-textfield__icon-password" :class="{ 'm--is-transparent': !hasValue }" v-if="propPasswordIcon">
             <m-icon-button :icon-name="iconNamePassword" button-size="22px" @click="togglePasswordVisibility">{{ iconDescriptionPassword }}</m-icon-button>
