--- a/src/components/file-upload/file-upload.scss
+++ b/src/components/file-upload/file-upload.scss
@@ -12,19 +12,21 @@ $m-file-upload-max-height--s: 72px;
         }
 
         &__list {
-            margin: 0;
+            margin-top: $m-margin--s;
+            margin-bottom: 0;
 
             li {
-                margin-top: $m-margin--s;
+                margin-top: $m-margin;
 
-                &:last-child {
-                    margin-bottom: 0;
+                &:first-child {
+                    margin-top: 0;
                 }
             }
         }
 
         &__file-name {
             margin-top: 0;
+            word-break: break-all;
         }
 
         &__error {
