Rename prop asterisk -> requiredMarker

--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -16,7 +16,7 @@
                    :focus="isFocus"
                    :empty="isEmpty"
                    :icon-name="iconName"
-                   :asterisk="asterisk">
+                   :required-marker="requiredMarker">
         <m-textarea-resize class="m-textarea__input"
                   :disabled="!active"
                   :placeholder="placeholder"
