--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -15,7 +15,7 @@
                    :label="label"
                    :focus="isFocus"
                    :empty="isEmpty"
-                   :asterisk="asterisk"
+                   :required-marker="requiredMarker"
                    :icon-name="iconName">
         <input ref="input"
                class="m-textfield__input"
