--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -212,7 +212,7 @@ $m-input-style--padding: 4px !default;
         display: inline-flex;
         align-items: center;
         width: 100%;
-        margin-bottom: 2px; // Magic number
+        margin-bottom: 4px; // Magic number
         font-size: $m-font-size;
         font-weight: $m-font-weight;
         color: $m-color--grey-darker;
@@ -224,8 +224,9 @@ $m-input-style--padding: 4px !default;
         }
     }
 
-    &__asterisk {
+    &__required-marker {
         color: $m-color--accent;
+        margin-left: 2px;
     }
 
     &__body {
