--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -10,7 +10,7 @@
                    :empty="isEmpty"
                    :error="hasError"
                    :valid="isValid"
-                   width="100%"
+                   :width="inputStyletWidth"
                    :icon-name="iconName"
                    @mousedown="inputOnMousedown"
                    @mouseup="inputOnMouseup"
