--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -94,15 +94,15 @@ $m-accordion--color-secondary: $m-color--accent;
             }
 
             &__body-wrap {
-                &.v-enter-to {
+                &.accordion-enter-to {
                     .m-accordion__body {
                         transform: translate3d(0, 0, 0);
                         opacity: 1;
                     }
                 }
 
-                &.v-enter,
-                &.v-leave-to {
+                &.accordion-enter,
+                &.accordion-leave-to {
                     .m-accordion__body {
                         transform: translate3d(0, $m-margin--l, 0);
                         opacity: 0;
