--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,6 +6,22 @@
     justify-content: center;
     overflow: hidden;
 
+    &.m--is-skin-dark {
+        background-color: $m-color--grey-darker;
+        // min-height: $m-touch-size*2;
+
+        // &::before {
+        //     position: absolute;
+        //     left: 0;
+        //     right: 0;
+        //     bottom: 0;
+        //     height: $m-border-width--l;
+        //     width: 100%;
+        //     content: '';
+        //     background: $m-color--border;
+        // }
+    }
+
     &.m--is-skin-light {
         &::before {
             position: absolute;
@@ -34,6 +50,10 @@
 
     &__button {
         position: relative;
+
+        .m--is-skin-dark & {
+            color: $m-color--white;
+        }
     }
 
     &__wrap {
@@ -42,6 +62,10 @@
         width: 100%;
         overflow-x: auto;
         overflow-y: hidden;
+
+        // .m--is-skin-dark & {
+        //     align-self: center;
+        // }
     }
 
     &__list {
@@ -51,6 +75,11 @@
         margin: 0;
         display: inline-flex;
         white-space: nowrap;
+
+        // .m--is-skin-dark & {
+        //     justify-content: space-between;
+        //     width: 100%;
+        // }
     }
 
     &__line,
