--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -1,5 +1,5 @@
 <li class="m-navbar-item"
-    :class="{'m--is-selected': selected,
+    :class="{'m--is-selected': isSelected,
              'm--is-disabled': isDisabled,
              'm--is-first' : isFirst,
              'm--is-last' : isLast}"
