--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -8,7 +8,7 @@
               'm--is-skin-plain': skin == 'plain',
               'm--is-skin-arrow': skin == 'arrow',
               'm--no-margin': !margin }">
-    <m-icon-button class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="left-chevron" @click="scrollLeft" v-if="hasScrolllH && arrowMobile"></m-icon-button>
+    <m-icon-button ref="buttonLeft" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="left-chevron" @click="scrollLeft" v-if="hasScrolllH && arrowMobile"></m-icon-button>
     <nav class="m-navbar__wrap" ref="wrap">
         <ul class="m-navbar__list" aria-hidden="true" ref="list">
             <slot></slot>
@@ -16,5 +16,5 @@
             <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': isAnimActive }" v-if="hasArrow" ref="Arrow"></li>
         </ul>
     </nav>
-    <m-icon-button class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="chevron" @click="scrollRight" v-if="hasScrolllH && arrowMobile"></m-icon-button>
+    <m-icon-button ref="buttonRight" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="chevron" @click="scrollRight" v-if="hasScrolllH && arrowMobile"></m-icon-button>
 </div>
