--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -14,7 +14,7 @@
                         'm--has-border': propIconBorder }"></span>
     </header>
     <m-accordion-transition :height-delta="24">
-        <div class="m-accordion__body-wrap" v-if="propOpen">
+        <div class="m-accordion__body-wrap" v-if="!propDisabled && propOpen">
             <div class="m-accordion__body" :class="{ 'm--has-padding': paddingBody && padding }">
                 <slot></slot>
             </div>
