--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -1,4 +1,6 @@
 @import '../../styles/abstracts/variables';
+@import './accordion-transition.scss';
+
 $m-accordion--icon-l-width: 12px;
 $m-accordion--icon-width: 10px;
 $m-accordion--icon-l-height: 2px;
