Navbar reacivity refactor -- part II

--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -1,8 +1,6 @@
 <li class="m-navbar-item"
     :class="{'m--is-selected': isSelected,
-             'm--is-disabled': isDisabled,
-             'm--is-first' : isFirst,
-             'm--is-last' : isLast}"
+             'm--is-disabled': isDisabled}"
     @keyup.enter="onClick"
     @click="onClick">
     <slot></slot>
