--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,5 +1,4 @@
-<div class="m-navbar"
-    :class="{ 'm--is-disabled': disabled,
+<div class="m-navbar" :class="{ 'm--is-disabled': disabled,
               'm--is-skin-tab': skin == 'light-tab' || skin == 'dark-tab',
               'm--is-skin-light-tab': skin == 'light-tab',
               'm--is-skin-dark-tab': skin == 'dark-tab',
@@ -8,13 +7,17 @@
               'm--is-skin-plain': skin == 'plain',
               'm--is-skin-arrow': skin == 'arrow',
               'm--no-margin': !margin }">
-    <m-icon-button ref="buttonLeft" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="left-chevron" @click="scrollLeft" v-if="hasScrolllH && arrowMobile"></m-icon-button>
+    <m-icon-button ref="buttonLeft" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="left-chevron"
+        @click="scrollLeft" v-if="hasScrolllH && arrowMobile"></m-icon-button>
     <nav class="m-navbar__wrap" ref="wrap">
         <ul class="m-navbar__list" aria-hidden="true" ref="list">
             <slot></slot>
-            <li aria-hidden="true" class="m-navbar__line" :class="{ 'm--is-anim-active': isAnimActive }" v-if="hasLine" ref="line"></li>
-            <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': isAnimActive }" v-if="hasArrow" ref="arrow"></li>
+            <transition @before-enter="beforeEnter()">
+                <li aria-hidden="true" class="m-navbar__line" :class="{ 'm--is-anim-active': isAnimActive }" v-if="hasLine" ref="line"></li>
+                <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': isAnimActive }" v-if="hasArrow" ref="arrow"></li>
+            </transition>
         </ul>
     </nav>
-    <m-icon-button ref="buttonRight" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="chevron" @click="scrollRight" v-if="hasScrolllH && arrowMobile"></m-icon-button>
+    <m-icon-button ref="buttonRight" class="m-navbar__button" :skin="isSkinDark" :button-size="ComputedHeight" icon-name="chevron"
+        @click="scrollRight" v-if="hasScrolllH && arrowMobile"></m-icon-button>
 </div>
