--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -8,7 +8,8 @@
     vertical-align: middle;
     font-size: 100%;
     border-radius: 4px;
-    padding: 12px $m-padding 10px $m-padding; // Magic number
+    padding: 10px $m-padding 12px $m-padding; // Magic number
+    font-family: $m-font-family;
     font-weight: $m-font-weight--bold;
 
     @include m-button();
