--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -1,5 +1,5 @@
-<article class="m-accordion" :class="['m--is-' + propSkin, {'m--is-closed': !propOpen, 'm--is-disabled': propDisabled}]">
-    <header tabindex="0" class="m-accordion__header" :class="{ 'm--is-icon-left': propIconPosition != 'right', 'm--has-padding': paddingHeader && padding }" @keyup.enter="toggleAccordion"
+<article class="m-accordion" :class="['m--is-' + propSkin, {'m--is-closed': !propOpen, 'm--is-disabled': propDisabled, 'm--has-icon-left': propIconPosition != 'right', 'm--has-icon-large': propIconSize=='large' }]">
+    <header tabindex="0" class="m-accordion__header" :class="{ 'm--has-padding': paddingHeader && padding }" @keyup.enter="toggleAccordion"
         @click.prevent="toggleAccordion" ref="accordionHeader">
         <div class="m-accordion__header__content">
             <slot name="header"></slot>
